--- a/index.html
+++ b/index.html
@@ -503,6 +503,82 @@
                 min-height: 100px;
             }
         }
+
+        /* COPY PROTECTION TOGGLE */
+        #copy-control {
+            /* position: fixed; */
+            /* bottom: 20px; */
+            /* right: 20px; */
+            /* background: #fff; */
+            /* padding: 10px 15px; */
+            /* border-radius: 30px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15); */
+            /* display: flex; */
+            /* align-items: center; */
+            /* gap: 10px;
+            z-index: 9999; */
+            /* border: 1px solid #e0e0e0; */
+            /* font-family: sans-serif; */
+            /* font-size: 14px; */
+            margin-top: 50px;
+        }
+
+        /* Switch Slider Styles */
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 40px;
+            height: 22px;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+            border-radius: 34px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 16px;
+            width: 16px;
+            left: 3px;
+            bottom: 3px;
+            background-color: white;
+            transition: .4s;
+            border-radius: 50%;
+        }
+
+        input:checked+.slider {
+            background-color: #2563eb;
+        }
+
+        input:checked+.slider:before {
+            transform: translateX(18px);
+        }
+
+        /* Locked State logic */
+        body.copy-locked .code-box {
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            pointer-events: none;
+            /* Disables interaction fully inside code boxes */
+            opacity: 0.9;
+        }
     </style>
 </head>
 
@@ -510,8 +586,10 @@
 
     <div class="container">
         <div class="header">
-            <h1>☕ Java Swing Components & Layouts 
-                <span style="font-size: 0.5em; color: #64748b; display: block; margin-top: 5px;">A Visual Guide to Swing's Building Blocks</span></h1>
+            <h1>☕ Java Swing Components & Layouts
+                <span style="font-size: 0.5em; color: #64748b; display: block; margin-top: 5px;">A Visual Guide to
+                    Swing's Building Blocks</span>
+            </h1>
             <p>- By Muhammed Rifad KP</p>
         </div>
 
@@ -1314,6 +1392,61 @@ public class StudentRegApp {
         </div>
 
     </div>
+
+    <!-- COPY TOGGLE UI -->
+    <div id="copy-control">
+        <!-- <span style="font-weight:600; color:#333;">Copy Lock</span> -->
+        <label class="switch">
+            <input type="checkbox" id="copy-toggle" checked>
+            <span class="slider"></span>
+        </label>
+    </div>
+
+    <script>
+        const toggle = document.getElementById('copy-toggle');
+        const body = document.body;
+
+        function updateCopyState() {
+            if (toggle.checked) {
+                body.classList.add('copy-locked');
+            } else {
+                body.classList.remove('copy-locked');
+            }
+        }
+
+        // Initialize state
+        updateCopyState();
+
+        // Listen for toggle changes
+        toggle.addEventListener('change', updateCopyState);
+
+        // EXTRA SECURITY: Prevent Copy Event on Locked Elements
+        document.addEventListener('copy', (e) => {
+            if (body.classList.contains('copy-locked')) {
+                // Check if selection is within a code block
+                const selection = window.getSelection();
+                if (selection.rangeCount > 0) {
+                    const node = selection.anchorNode;
+                    // If selection touches a code box, block it
+                    if (node && (node.parentElement.closest('.code-box') || node instanceof HTMLElement && node.closest('.code-box'))) {
+                        e.preventDefault();
+                        // alert("Copy is disabled for code examples."); 
+                        return false;
+                    }
+                }
+            }
+        });
+
+        // Disable Right Click context menu on Code Boxes when locked
+        document.addEventListener('contextmenu', (e) => {
+            if (body.classList.contains('copy-locked')) {
+                if (e.target.closest('.code-box')) {
+                    e.preventDefault();
+                    return false;
+                }
+            }
+        });
+    </script>
 
 </body>
 
