--- a/index.html
+++ b/index.html
@@ -529,6 +529,8 @@
             display: inline-block;
             width: 40px;
             height: 22px;
+            border: 2px solid #00000052;
+            border-radius: 15px;
         }
 
         .switch input {
@@ -544,7 +546,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #ccc;
+            background-color: #cccccc00;
             transition: .4s;
             border-radius: 34px;
         }
@@ -556,13 +558,13 @@
             width: 16px;
             left: 3px;
             bottom: 3px;
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0);
             transition: .4s;
             border-radius: 50%;
         }
 
         input:checked+.slider {
-            background-color: #2563eb;
+            background-color: #2564eb00;
         }
 
         input:checked+.slider:before {
